--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,7 @@
+/* All general stylings that aren't as global (for core content), i.e. general layout */
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
