--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+/* Only global styles that affect all the code (i.e. typography, resets, etc.) */
+
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
@@ -6,8 +8,8 @@ body {
   width: 100%;
 }
 
-#root {
+* {
   margin: 0;
   padding: 0;
-  width: 100%;
+  box-sizing: border-box;
 }
