--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -21,6 +21,10 @@
     display: block;
 }
 
+.header .right-header {
+    display: flex;
+}
+
 .header .right-header .right-button {
     margin-left: 0.5vw;
     margin-right: 0.5vw;
