--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,6 +2,7 @@
     align-self: center;
     background-color: grey;
     width: 100%;
+    box-shadow: 0px 0.25vh 5px rgba(0, 0, 0, 0.3); 
 }
 
 .header .navigation {
