--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -10,10 +10,15 @@
     gap: 0.5vw; /* The space between elements */
     padding: 0.9vw; 
     background-color: white; 
-    box-shadow: 0px 0.25vh 5px rgba(0, 0, 0, 0.2); 
     border-radius: 10px; 
     width: 100%; 
     box-sizing: border-box; /* Includes padding and border in width calculation */
+    box-shadow: 0px 0.25vh 5px rgba(0, 0, 0, 0.2); 
+    transition: box-shadow 0.3s ease;
+}
+
+.card:hover {
+    box-shadow: 0px 0.25vh 10px rgba(0, 0, 0, 0.3); 
 }
 
 .title {
