--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -11,18 +11,43 @@
     align-items: center;
 }
 
-.header .left-header .logo-button img{
+.header .left-header .logo-button {
+    position: relative; 
     width: 8vh;
     height: 8vh;
-    display: block;
-}
-
-.header .left-header .logo-button {
+    padding: 1vh;
+    margin: 1vh;
     background: transparent;
     border: none;
-    padding: 1vh;
     cursor: pointer;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header .left-header .logo-button img {
+    width: 100%; /* Match the button size */
+    height: 100%; 
+    transition: opacity 0.7s ease;
+    position: absolute; /* Stack images */
+    top: 0;
+    left: 0;
+}
+
+.header .left-header .logo-button img.default {
+    opacity: 1;
+}
+
+.header .left-header .logo-button img.hover {
+    opacity: 0;
+}
+
+.header .left-header .logo-button:hover img.default {
+    opacity: 0;
+}
+
+.header .left-header .logo-button:hover img.hover {
+    opacity: 1;
 }
 
 .header .right-header {
