--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -15,6 +15,7 @@
     box-sizing: border-box; /* Includes padding and border in width calculation */
     box-shadow: 0px 0.25vh 5px rgba(0, 0, 0, 0.2); 
     transition: box-shadow 0.3s ease;
+    margin: 1.75vh 2vw;
 }
 
 .card:hover {
